--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-scripts": "2.1.3"
   },
   "scripts": {
+    "prestart": "tailwind build ./src/tailwind.css -c ./tailwind.js -o ./src/scss/utilities/tailwind.scss",
     "start": "react-scripts start",
+    "prebuild": "tailwind build ./src/tailwind.css -c ./tailwind.js -o ./src/scss/utilities/tailwind.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -22,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "tailwindcss": "^0.7.4"
+  }
 }
