--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prebuild": "tailwind build ./src/tailwind.css -c ./tailwind.js -o ./src/scss/utilities/tailwind.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:gh-pages": "push-dir --dir=build --branch=gh-pages"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,6 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "push-dir": "^0.4.1",
     "tailwindcss": "^0.7.4"
   }
 }
